Add soichiro's office hour schedule

--- a/content/syllabus/index.Rmd
+++ b/content/syllabus/index.Rmd
@@ -24,8 +24,8 @@ Office Hours: TBD
 
 Soichiro Yamauchi  
 [syamauchi@g.harvard.edu](mailto:syamauchi@g.harvard.edu)  
-[https://soichiroy.github.io/]()  
-Office Hours: TBD
+[https://soichiroy.github.io/](https://soichiroy.github.io/)  
+Office Hours: Tuesdays, 3:00pm -- 4:30pm
 
 
 ## Description
