--- a/content/syllabus/index.Rmd
+++ b/content/syllabus/index.Rmd
@@ -19,13 +19,13 @@ Office Hours: Thursdays, 10am-noon
 
 Mafalda Pratas Fernandes  
 [pratasfernandes@g.harvard.edu](mailto:pratasfernandes@g.harvard.edu)  
-Office Hours: TBD
+Office Hours: Wednesdays, 11am-12:30pm ET
 
 
 Soichiro Yamauchi  
 [syamauchi@g.harvard.edu](mailto:syamauchi@g.harvard.edu)  
 [https://soichiroy.github.io/](https://soichiroy.github.io/)  
-Office Hours: Tuesdays, 3:00pm -- 4:30pm
+Office Hours: Tuesdays, 3:00pm - 4:30pm
 
 
 ## Description
