mafalda's correct OHs

--- a/content/syllabus/index.Rmd
+++ b/content/syllabus/index.Rmd
@@ -19,7 +19,7 @@ Office Hours: Thursdays, 10am-noon
 
 Mafalda Pratas Fernandes  
 [pratasfernandes@g.harvard.edu](mailto:pratasfernandes@g.harvard.edu)  
-Office Hours: TBD
+Office Hours: Fridays, 12:30pm-2pm ET
 
 
 Soichiro Yamauchi  
