--- a/content/weeks/01-rand-exp.Rmd
+++ b/content/weeks/01-rand-exp.Rmd
@@ -46,3 +46,10 @@ type: docs
 - Data: [`transphobia.csv`](/data/transphobia.csv)
 - Completed Rmd file with all prompts: [`week-01-notes.Rmd`](/weeks/week-01-notes.Rmd)
 - [Zoom Recording](https://canvas.harvard.edu/courses/74805/external_tools/53531) (Go to "Cloud Recordings" Tab)
+
+## R Coding Demonstration
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-e1iauR8d1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+- Data: [`transphobia.csv`](/data/transphobia.csv)
+- Completed Rmd file with all prompts: [`week-01-notes.Rmd`](/weeks/week-01-notes.Rmd)
