--- a/content/weeks/02-observational.Rmd
+++ b/content/weeks/02-observational.Rmd
@@ -38,3 +38,10 @@ type: docs
 ### Materials
 
 - [Slides](/slides/03-measurement/01-descriptive-stats.pdf)
+
+
+## Live Meeting 
+
+- Data: [`newspapers.csv`](/data/newspapers.csv)
+- Completed Rmd file with all prompts: [`week-02-notes.Rmd`](/weeks/week-02-notes.Rmd)
+- [Zoom Recording](https://canvas.harvard.edu/courses/74805/external_tools/53531) (Go to "Cloud Recordings" Tab)
