--- a/content/assignments/ps1-trains.Rmd
+++ b/content/assignments/ps1-trains.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Problem Set 1: Effect of Demographic Change on Exclusionary Attitudes"
 due_date: 2020-09-16
+summary: >-
+  First Gov 51 problem set exploring a randomized experiment of
+  exposure to demographic change on immigration attitudes.
 ---
 
 You can find instructions for obtaining and submitting problem sets [here](/assignments/problem-sets/).
