--- a/content/weeks/00-week.Rmd
+++ b/content/weeks/00-week.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Week 0: Introduction"
 linktitle: "0: Introduction"
+summary: "What to do in the first week of of Gov 51"
 date: 2020-08-07
 menu:
   weeks:
