--- a/content/schedule/index.Rmd
+++ b/content/schedule/index.Rmd
@@ -1,9 +1,7 @@
 ---
 title: "Schedule"
 slug: schedule
-summary: >
-  Schedule of the Gov 51 semester with readings,
-  due dates, and links to materials
+summary: "Schedule of the Gov 51 semester with readings, due dates, and links to materials."
 ---
 
 ---
